--- a/BilleteraApp/appsettings.json
+++ b/BilleteraApp/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-7RLK868\\MSSQLSERVER01;Database=BilleteraDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "TU_CLAVE_SECRETA_LARGA_Y_SEGURA",
+    "Issuer": "BilleteraApp",
+    "Audience": "BilleteraApp",
+    "ExpiresInMinutes" : 60
   }
+
 }
