--- a/BilleteraApp/appsettings.json
+++ b/BilleteraApp/appsettings.json
@@ -10,10 +10,10 @@
     "DefaultConnection": "Server=DESKTOP-7RLK868\\MSSQLSERVER01;Database=BilleteraDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Jwt": {
-    "Key": "TU_CLAVE_SECRETA_LARGA_Y_SEGURA",
+    "Key": "EsteEsUnSuperSecretoMuyLargoDeAlMenos32Caracteres!",
     "Issuer": "BilleteraApp",
     "Audience": "BilleteraApp",
-    "ExpiresInMinutes" : 60
+    "ExpiresInMinutes": 60
   }
 
 }
